<resources>
    <string name="app_name">ShowMeTheMoney</string>
    <string name="action_settings">Settings</string>
    <string name="hint_et_money">금액</string>
    <string name="hint_et_desc">설명</string>
    <string name="income">수입</string>
    <string name="expense">지출</string>
    <string name="save">저장</string>
    <string name="icon_for_date_picker">icon for date picker</string>
    <string name="icon_for_description">icon for description</string>
    <string name="icon_for_money">icon for money</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_00">00</string>
    <string name="number_0">0</string>
    <string name="number_c">C</string>
    <string name="_0">0</string>
    <string name="default_entry_type">\?</string>
    <string name="hint_et_entry_desc">상세 설명</string>
    <string name="icon_for_entry_type">icon for entry type</string>
    <string name="wanna_delete">삭제하시겠습니까?</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>

    <string-array name="expense_type">
        <item>식비</item>
        <item>교통비</item>
        <item>의류비</item>
        <item>유흥</item>
        <item>교육비</item>
    </string-array>
</resources>
