<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:contentDescription="@string/icon_for_date_picker"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/tvPickDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="2017/02/21" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="12dp"
                android:contentDescription="@string/icon_for_money"
                android:src="@drawable/ic_attach_money_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp">

                <EditText
                    android:id="@+id/etMoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_et_money"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:text="12,000" />
            </android.support.design.widget.TextInputLayout>

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textOff="@string/expense"
                android:textOn="@string/income" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:contentDescription="@string/icon_for_description"
                android:src="@drawable/ic_description_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                app2:counterEnabled="true"
                app2:counterMaxLength="50">

                <EditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_et_desc"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="12dp" />

            <Spinner
                android:id="@+id/sEntryType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>